CHANGES IN FLTK 1.1.5rc3

	- Documentation updates (STR #505, STR #513)
	- Updated PNG library source to 1.2.6 + wutil patch.
	- Updated ZLIB library source to 1.2.1.
	- Fixed a compile problem with the Linux 2.6 threading
	  support (STR #483)
	- Fixed problems with 2-byte Xpm files on 64-bit
	  platforms (STR #525)
	- FLTK didn't handle the ReparentNotify event on X11
	  (STR #524)
	- The old source file "fl_set_gray.cxx" is not needed
	  (STR #516)
	- Fl_Text_Display still called delete[] instead of
	  free() in one place (STR #503)
	- The symbol test program did not handle the @+ symbol
	  properly (STR #490)
	- Fl_File_Chooser didn't correctly call isprint() and
	  isspace() when checking to see if the current file was
	  text that can be previewed (STR #517)
	- FLUID didn't compile with Borland C++ due to a
	  compiler bug (STR #496)
	- Fl_Positioner did not handle reversed min and max
	  values (STR #510)
	- fl_descent(), fl_height(), and fl_width() would crash
	  a program if you didn't call fl_font() first; they now
	  return -1 if no font is set (STR #500)
	- Added test/unittests to verify pixel drawing and 
	  alignment across platforms
	- Fl_Menu_::find_item() didn't determine the menu path
	  properly (STR #481)
	- The build system now installs image library header
	  files in FL/images/filename.h so that FLTK programs
	  will use the same header files as the FLTK image
	  libraries.
	- The build system now creates image libraries named
	  "libfltk_name.a" instead of "libname.a" to avoid
	  clobbering an existing installed library (STR #480)


CHANGES IN FLTK 1.1.5rc2

	- Documentation updates (STR #365, STR #399, STR #407,
	  STR #412, STR #414, STR #452, STR #462)
	- Fl_Text_Display did not handle drawing of overlapping
	  text (italic next to plain, etc.) properly (STR #381)
	- All of the core widgets now consistently set changed()
	  before calling the callback function for a change in
	  value; this allows programs to check the changed()